@@ -10,7 +10,7 @@
 
   <properties>
     <bundle.namespace>org.neo4j.cypher</bundle.namespace>
-    <scala.version>2.9.1-1</scala.version>
+    <scala.version>2.10.0</scala.version>
     <license-text.header>GPL-3-header.txt</license-text.header>
     <docs.url>http://docs.neo4j.org/chunked/${project.version}/cypher-query-lang.html</docs.url>
   </properties>
@@ -56,8 +56,8 @@
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.9.1</artifactId>
-      <version>1.6.1</version>
+      <artifactId>scalatest_2.10</artifactId>
+      <version>2.0.M6-SNAP5</version>
       <scope>test</scope>
     </dependency>
     <dependency>
